# physics-engine

./: Cargo.toml  README.md  things.json
controller/: CMakeLists.txt  build.sh  main.c  run.sh
src/: collision.rs  controller.rs  loader.rs  main.rs  things.rs
